include/rtw_mlme_ext.h

#define _HW_STATE_STATION_	0x02
#define	WIFI_FW_NULL_STATE		_HW_STATE_NOLINK_
#define	WIFI_FW_STATION_STATE		_HW_STATE_STATION_
#define	WIFI_FW_ASSOC_SUCCESS		0x00004000
extern unsigned char WMM_OUI[];
void Set_MSR(_adapter *padapter, u8 type);
void set_channel_bwmode(_adapter *padapter, unsigned char channel, unsigned char channel_offset, unsigned short bwmode);
void flush_all_cam_entry(_adapter *padapter);
u16 get_beacon_interval(WLAN_BSSID_EX *bss);
int WMM_param_handler(_adapter *padapter, PNDIS_802_11_VARIABLE_IEs	pIE);
u32 report_join_res(_adapter *padapter, int aid_res, u16 status);
int issue_deauth_ex(_adapter *padapter, u8 *da, unsigned short reason, int try_cnt, int wait_ms);
void start_clnt_join(_adapter *padapter);
int rtw_chk_start_clnt_join(_adapter *padapter, u8 *ch, u8 *bw, u8 *offset);
u8 join_cmd_hdl(_adapter *padapter, u8 *pbuf);